utilize custom brand colors

--- a/app/(gg-site)/globals.css
+++ b/app/(gg-site)/globals.css
@@ -1,1 +1,154 @@
 @import "tailwindcss";
+@import "@radix-ui/themes/styles.css";
+
+:root, .light, .light-theme, .radix-themes {
+  --color-background: #fff;
+}
+
+:root, .light, .light-theme {
+  --gray-1: #fdfdfd;
+  --gray-2: #f9f9f9;
+  --gray-3: #f0f0ef;
+  --gray-4: #e9e8e7;
+  --gray-5: #e2e1e0;
+  --gray-6: #dad9d7;
+  --gray-7: #cfcecc;
+  --gray-8: #bcbbb8;
+  --gray-9: #8e8c89;
+  --gray-10: #83827f;
+  --gray-11: #636260;
+  --gray-12: #21201e;
+
+  --gray-a1: #00000002;
+  --gray-a2: #00000006;
+  --gray-a3: #10100010;
+  --gray-a4: #160b0018;
+  --gray-a5: #1109001f;
+  --gray-a6: #140d0028;
+  --gray-a7: #0f0a0033;
+  --gray-a8: #0f0b0047;
+  --gray-a9: #0b070076;
+  --gray-a10: #08060080;
+  --gray-a11: #0504009f;
+  --gray-a12: #030200e1;
+
+  --gray-contrast: #FFFFFF;
+  --gray-surface: #ffffffcc;
+  --gray-indicator: #8e8c89;
+  --gray-track: #8e8c89;
+}
+
+
+@supports (color: color(display-p3 1 1 1)) {
+  @media (color-gamut: p3) {
+    :root, .light, .light-theme {
+      --gray-1: oklch(99.4% 0.0005 84.57);
+      --gray-2: oklch(98.2% 0.0007 84.57);
+      --gray-3: oklch(95.6% 0.001 84.57);
+      --gray-4: oklch(93.2% 0.0015 84.57);
+      --gray-5: oklch(91% 0.0017 84.57);
+      --gray-6: oklch(88.6% 0.0023 84.57);
+      --gray-7: oklch(85.3% 0.0028 84.57);
+      --gray-8: oklch(79.2% 0.0038 84.57);
+      --gray-9: oklch(64.1% 0.0046 84.57);
+      --gray-10: oklch(60.6% 0.0043 84.57);
+      --gray-11: oklch(49.8% 0.0036 84.57);
+      --gray-12: oklch(24.3% 0.0036 84.57);
+
+      --gray-a1: color(display-p3 0 0 0 / 0.0078);
+      --gray-a2: color(display-p3 0 0 0 / 0.0235);
+      --gray-a3: color(display-p3 0.0667 0.0667 0.0078 / 0.063);
+      --gray-a4: color(display-p3 0.0941 0.051 0.0118 / 0.095);
+      --gray-a5: color(display-p3 0.0706 0.0392 0.0039 / 0.122);
+      --gray-a6: color(display-p3 0.0784 0.051 0.0039 / 0.157);
+      --gray-a7: color(display-p3 0.0588 0.0392 0 / 0.2);
+      --gray-a8: color(display-p3 0.0588 0.0471 0.0039 / 0.279);
+      --gray-a9: color(display-p3 0.0431 0.0275 0.0039 / 0.463);
+      --gray-a10: color(display-p3 0.0314 0.0235 0 / 0.502);
+      --gray-a11: color(display-p3 0.0196 0.0157 0 / 0.624);
+      --gray-a12: color(display-p3 0.0118 0.0078 0 / 0.883);
+
+      --gray-contrast: #FFFFFF;
+      --gray-surface: color(display-p3 1 1 1 / 80%);
+      --gray-indicator: oklch(64.1% 0.0046 84.57);
+      --gray-track: oklch(64.1% 0.0046 84.57);
+    }
+  }
+}
+
+
+
+:root, .light, .light-theme {
+  --lime-1: #fcfefa;
+  --lime-2: #f7faf5;
+  --lime-3: #ecf6e7;
+  --lime-4: #e0efd7;
+  --lime-5: #d1e7c5;
+  --lime-6: #bedbad;
+  --lime-7: #a5cb8e;
+  --lime-8: #82b561;
+  --lime-9: #6ca545;
+  --lime-10: #62983c;
+  --lime-11: #4a7a27;
+  --lime-12: #293a1f;
+
+  --lime-a1: #66cc0005;
+  --lime-a2: #3380000a;
+  --lime-a3: #36a00018;
+  --lime-a4: #3a990028;
+  --lime-a5: #3596003a;
+  --lime-a6: #35900052;
+  --lime-a7: #348a0071;
+  --lime-a8: #3688009e;
+  --lime-a9: #368400ba;
+  --lime-a10: #327800c3;
+  --lime-a11: #296200d8;
+  --lime-a12: #0b1f00e0;
+
+  --lime-contrast: #fff;
+  --lime-surface: #f5f9f3cc;
+  --lime-indicator: #6ca545;
+  --lime-track: #6ca545;
+}
+
+@supports (color: color(display-p3 1 1 1)) {
+  @media (color-gamut: p3) {
+    :root, .light, .light-theme {
+      --lime-1: oklch(99.4% 0.0052 134.4);
+      --lime-2: oklch(98.2% 0.0089 134.4);
+      --lime-3: oklch(96.1% 0.0224 134.4);
+      --lime-4: oklch(93.4% 0.0357 134.4);
+      --lime-5: oklch(90.1% 0.0511 134.4);
+      --lime-6: oklch(85.8% 0.0689 134.4);
+      --lime-7: oklch(79.8% 0.0918 134.4);
+      --lime-8: oklch(71.6% 0.1256 134.4);
+      --lime-9: oklch(66.1% 0.1419 134.4);
+      --lime-10: oklch(62.2% 0.1368 134.4);
+      --lime-11: oklch(52.7% 0.1252 134.4);
+      --lime-12: oklch(32.7% 0.0517 134.4);
+
+      --lime-a1: color(display-p3 0.4118 0.8039 0.0196 / 0.02);
+      --lime-a2: color(display-p3 0.3176 0.5137 0.0235 / 0.04);
+      --lime-a3: color(display-p3 0.2706 0.6157 0.0118 / 0.091);
+      --lime-a4: color(display-p3 0.2706 0.5843 0.0078 / 0.15);
+      --lime-a5: color(display-p3 0.2392 0.549 0.0039 / 0.216);
+      --lime-a6: color(display-p3 0.2471 0.5294 0.0039 / 0.306);
+      --lime-a7: color(display-p3 0.2353 0.5059 0.0039 / 0.42);
+      --lime-a8: color(display-p3 0.2314 0.4941 0 / 0.581);
+      --lime-a9: color(display-p3 0.2275 0.4745 0 / 0.679);
+      --lime-a10: color(display-p3 0.2039 0.4275 0 / 0.714);
+      --lime-a11: color(display-p3 0.1647 0.3412 0 / 0.797);
+      --lime-a12: color(display-p3 0.051 0.1098 0 / 0.867);
+
+      --lime-contrast: #fff;
+      --lime-surface: color(display-p3 0.9608 0.9765 0.9529 / 0.8);
+      --lime-indicator: oklch(66.1% 0.1419 134.4);
+      --lime-track: oklch(66.1% 0.1419 134.4);
+    }
+  }
+}
+
+.extra-vision {
+  border: 1px solid var(--lime-10);
+  color: var(--lime-10);
+}
